--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <h id="pivo" title="Speciální nabídka piva" class="break nobalance">Speciální nabídka piva</h>
       <desc>n/a</desc>
       <p var="inputvar-nabidka-pivo-logo">n/a</p>
-      <dl var="inputvar-nabidka-pivo" class="meal" data-type="Beer"><dt>n/a</dt><dd>n/a</dd></dl>
+      <dl var="inputvar-nabidka-pivo cms-server" class="meal" data-type="Beer"><dt>n/a</dt><dd>n/a</dd></dl>
       <h id="reference" class="nobalance">Reference</h>
       <desc>n/a</desc>
       <dl class="citation">
