--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <dl var="inputvar-akce-jidlo5" class="meal" data-type="Main meal"><dt>n/a</dt><dd>n/a</dd></dl>
       <h id="pivo" title="Speciální nabídka piva" class="break nobalance">Speciální nabídka piva</h>
       <desc>n/a</desc>
-      <p var="inputvar-nabidka-pivo-logo">n/a</p>
+      <p var="inputvar-nabidka-pivo-logo cms-server">n/a</p>
       <dl var="inputvar-nabidka-pivo" class="meal" data-type="Beer"><dt>n/a</dt><dd>n/a</dd></dl>
       <h id="reference" class="nobalance">Reference</h>
       <desc>n/a</desc>
