--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
     <dl class="card card-emph booking">
       <dt>Rezervace</dt>
       <dd>Do 14 osob lze rezervovat pouze telefonicky na čísle <a href="tel:+420777330050">+420 777 330 050</a>.</dd>
-      <dd><a var="inputvar-term-booking1">Rezervace pro 15 až 30 osob?</a></dd>
-      <dd><a var="inputvar-term-booking2">Rezervace nad 30 osob?</a></dd>
+      <dd><a var="inputvar-term-booking">Rezervace pro 15 a více osob?</a></dd>
       <dd>O víkendech doporučujeme provádět rezervace. Rezervace držíme 30 minut. Děkujeme za pochopení.</dd>
     </dl>
 <!--
