--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -6,9 +6,6 @@
     <h id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
-      <dt>Carling British Cider Cherry <span>0,3 l</span></dt>
-      <dd class="price">45 Kč</dd>
-      <dd>4 % alk. (sklo)</dd>
       <dt>Pilsner Urquell točené <span>0,3 l</span></dt>
       <dd class="price">30 Kč</dd>
       <dt>Pilsner Urquell točené <span>0,5 l</span></dt>
@@ -26,6 +23,9 @@
       <dt>Guinness (plech) <span>0,44 l</span></dt>
       <dd class="price">48 Kč</dd>
       <dd>Irské černé pivo</dd>
+      <dt>Carling British Cider Cherry <span>0,3 l</span></dt>
+      <dd class="price">45 Kč</dd>
+      <dd>4 % alk. (sklo)</dd>
     </dl>
 
     <h id="michane" class="break" title="Míchané nápoje, aperitivy a sekty…">Míchané nápoje, aperitivy a sekty</h>
@@ -98,7 +98,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Romerquelle <span>0,75 l</span></dt>
       <dd class="price">70 Kč</dd>
       <dd>(perlivá, neperlivá)</dd>
-      <dt>Fuzetea <span>0,25 l</span></dt>
+      <dt>Ledový čaj Fuzetea <span>0,25 l</span></dt>
       <dd class="price">38 Kč</dd>
       <dd>(zelený s mangem a heřmánkem, černý s broskví a ibiškem)</dd>
       <dt>Karafa s vodou a citronem <span>1 l</span></dt>
@@ -110,23 +110,21 @@ nápoje detailněji popsány včetně složení.</desc> -->
     <p class="print"><img src="/files/thumbs/coffee.jpg" alt="Coffee"/></p>
     <dl class="meal meal-oneline">
       <dt>Espresso</dt>
-      <dd class="price">37 Kč</dd>
+      <dd class="price">40 Kč</dd>
       <dt>Espresso lungo</dt>
-      <dd class="price">39 Kč</dd>
+      <dd class="price">43 Kč</dd>
       <dt>Dopio (2× Espresso)</dt>
       <dd class="price">75 Kč</dd>
       <dt>Cappucino</dt>
-      <dd class="price">43 Kč</dd>
+      <dd class="price">48 Kč</dd>
       <dt>Latte macchiatto</dt>
-      <dd class="price">45 Kč</dd>
+      <dd class="price">53 Kč</dd>
       <dt>Vídeňská káva</dt>
-      <dd class="price">43 Kč</dd>
-      <dt>Vídeňská melange</dt>
-      <dd class="price">43 Kč</dd>
+      <dd class="price">45 Kč</dd>
       <dt>Alžírská káva</dt>
       <dd class="price">70 Kč</dd>
       <dt>Turecká káva</dt>
-      <dd class="price">30 Kč</dd>
+      <dd class="price">35 Kč</dd>
       <dt>Ledová káva se zmrzlinou</dt>
       <dd class="price">70 Kč</dd>
       <dt>Frappé</dt>
@@ -143,8 +141,6 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Náš pečený ovocný čaj</dt>
       <dd class="price">49 Kč</dd>
       <dd>Směs hruška + jablko + švestka + grep</dd>
-      <dt>Grog</dt>
-      <dd class="price">42 Kč</dd>
     </dl>
 
     <h id="rumy" class="break">Rumy a pálenky</h>
