--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -131,7 +131,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">45 Kč</dd>
       <dt>Sypané čaje montecelio </dt>
       <dd class="price">47 Kč</dd>
-      <dd>(ovocný, černý – earl grey, roibos, zelený)</dd>
+      <dd>(ovocný, černý – Earl Grey, rooibos, zelený)</dd>
       <dt>Zázvorový čaj</dt>
       <dd class="price">52 Kč</dd>
       <dd>(čerstvý zázvor)</dd>
