--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       <desc>Naše restaurace se objevila v pořadech Živě na Jedničce a Kluci v akci. V rámci pořadů jsme mimo jiné ukázali, jak správně připravit hamburger nebo naše vepřová žebra.</desc>
       <ul>
         <li><a href="//youtu.be/yp3vGZunX-E"><span class="fab fa-2x fa-youtube">i</span>Promo video restaurace Steakgrill.</a></li>
-        <li><a href="//www.youtube.com/watch?v=I8PfnspoBnU"><span class="fab fa-2x fa-youtube">i</span>Video, kde Jaroslav Honzajk představuje restauraci Steakgrill.</a></li>
-        <li><a href="//www.youtube.com/watch?v=1QCLO8j9-lg"><span class="fab fa-2x fa-youtube">i</span>Video o restauraci Steakgrill z Ústecké TV.</a></li>
+        <li><a href="https://www.youtube.com/watch?v=I8PfnspoBnU"><span class="fab fa-2x fa-youtube">i</span>Video, kde Jaroslav Honzajk představuje restauraci Steakgrill.</a></li>
+        <li><a href="https://www.youtube.com/watch?v=1QCLO8j9-lg"><span class="fab fa-2x fa-youtube">i</span>Video o restauraci Steakgrill z Ústecké TV.</a></li>
       </ul>
       <ul>
         <li><a href="http://www.ceskatelevize.cz/ivysilani/10396278677-zive-na-jednicce/312292320120055/obsah/205905-serial-grilovani-mleteho-masa/"><span class="fas fa-2x fa-play-circle">i</span>Seriál: Grilování mletého masa</a></li>
