--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h id="videoarchiv">Videoarchiv</h>
       <desc>Naše restaurace se objevila v pořadech Živě na Jedničce a Kluci v akci. V rámci pořadů jsme mimo jiné ukázali, jak správně připravit hamburger nebo naše vepřová žebra.</desc>
       <ul>
-        <li><a href="//youtu.be/yp3vGZunX-E"><span class="fab fa-2x fa-youtube">i</span>Promo video restaurace Steakgrill.</a></li>
+        <li><a href="https://youtu.be/yp3vGZunX-E"><span class="fab fa-2x fa-youtube">i</span>Promo video restaurace Steakgrill.</a></li>
         <li><a href="https://www.youtube.com/watch?v=I8PfnspoBnU"><span class="fab fa-2x fa-youtube">i</span>Video, kde Jaroslav Honzajk představuje restauraci Steakgrill.</a></li>
         <li><a href="https://www.youtube.com/watch?v=1QCLO8j9-lg"><span class="fab fa-2x fa-youtube">i</span>Video o restauraci Steakgrill z Ústecké TV.</a></li>
       </ul>
