--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -84,7 +84,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">38 Kč</dd>
       <dt>Kinley zázvor <span>0,25 l</span></dt>
       <dd class="price">38 Kč</dd>
-      <dt>Cappy <span>0,2 l</span></dt>
+      <dt>Cappy <span>0,25 l</span></dt>
       <dd class="price">36 Kč</dd>
       <dd>(pomeranč, jahoda, multivitamín, černý rybíz, hruška, jablko)</dd>
       <dt>Bonaqua <span>0,25 l</span></dt>
@@ -189,6 +189,8 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">30 Kč</dd>
       <dt>Vodka Finlandia</dt>
       <dd class="price">40 Kč</dd>
+      <dt>Ruský standard</dt>
+      <dd class="price">45 Kč</dd>
       <dt>Slivovice</dt>
       <dd class="price">50 Kč</dd>
       <dt>Tanquearay</dt>
