--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -100,6 +100,15 @@
       <dt class="price">Cena</dt>
       <dd class="price">174 Kč</dd>
     </dl>
+    <dl class="meal">
+      <dt>Sezónní zeleninový salát / smažené krevety</dt>
+      <dd>Směs listových salátů, rajčat, okurky, ředkviček, náš Steakgrill dresink.</dd>
+      <dt class="price">Cena</dt>
+      <dd class="price multiple">
+        <span><span>salát</span><span>129 Kč</span></span>
+        <span><span>5 ks krevet</span><span>199 Kč</span></span>
+      </dd>
+    </dl>
 
     <h class="break" id="z_panve_fritezy_a_woku">Z pánve, fritézy a woku</h>
     <desc>Pro přípravu mezinárodních jídel používáme autentické nástroje. Kachní a krůtí maso vždy nakládáme či napichujeme a připravujeme metodou <a var="inputvar-term-sous-vide">sous-vide</a>.</desc>
@@ -252,7 +261,7 @@
     </dl>
 
     <h class="break" id="detska_jidla">Dětská jídla</h>
-    <desc>Pro naše nejmenší strávníky připravujeme jídla s nízkou gramáží. Jídla jsou vhodná pro děti do 12 let.</desc>
+    <desc>Pro naše nejmenší strávníky připravujeme jídla s nízkou gramáží. Jídla jsou pro děti do 12 let. Pro ostatní zákazníky je cena o 50 Kč vyšší.</desc>
     <dl class="meal">
       <dt>Pirátův poklad</dt>
       <dd>Smažené nugety z čerstvých kuřecích prsou, hranolky a medový kečup</dd>
