--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -109,6 +109,12 @@
         <span><span>5 ks krevet</span><span>199 Kč</span></span>
       </dd>
     </dl>
+    <dl class="meal">
+      <dt>Zelný salát Coleslaw, 360 g</dt>
+      <dd>Původem holandský salát populární po celém světě. Zelný salát z krouhaného zelí, mrkev, cibule, majonéza.</dd>
+      <dt class="price">Cena</dt>
+      <dd class="price">59 Kč</dd>
+    </dl>
 
     <h class="break" id="z_panve_fritezy_a_woku">Z pánve, fritézy a woku</h>
     <desc>Pro přípravu mezinárodních jídel používáme autentické nástroje. Kachní a krůtí maso vždy nakládáme či napichujeme a připravujeme metodou <a var="inputvar-term-sous-vide">sous-vide</a>.</desc>
@@ -261,7 +267,7 @@
     </dl>
 
     <h class="break" id="detska_jidla">Dětská jídla</h>
-    <desc>Pro naše nejmenší strávníky připravujeme jídla s nízkou gramáží. Jídla jsou pro děti do 12 let. Pro ostatní zákazníky je cena o 50 Kč vyšší.</desc>
+    <desc>Pro naše nejmenší strávníky připravujeme za zvýhodněnou cenu jídla s nízkou gramáží. Jídla jsou pro děti do 12 let. Pro ostatní zákazníky je cena o 50 Kč vyšší.</desc>
     <dl class="meal">
       <dt>Pirátův poklad</dt>
       <dd>Smažené nugety z čerstvých kuřecích prsou, hranolky a medový kečup</dd>
@@ -299,10 +305,8 @@
       <dd class="price">65 Kč</dd>
       <dt><a var="inputvar-term-gratinovani">Gratinované</a> brambory</dt>
       <dd class="price">46 Kč</dd>
-      <dt>Zelný salát Coleslaw malý</dt>
-      <dd class="price">26 Kč</dd>
-      <dt>Zelný salát Coleslaw velký</dt>
-      <dd class="price">48 Kč</dd>
+      <dt>Zelný salát Coleslaw malý, 120 g</dt>
+      <dd class="price">29 Kč</dd>
       <dt>Kukuřice O’Brien</dt>
       <dd class="price">45 Kč</dd>
       <dt>Krémový špenát</dt>
