--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
     </dl>
     <dl class="card card-emph booking">
       <dt>Rezervace</dt>
-      <dd>Do 14 osob lze rezervovat pouze telefonicky na čísle <a href="tel:+420777330050">+420 777 330 050</a>.</dd>
-      <dd><a var="inputvar-term-booking">Rezervace pro 15 a více osob?</a></dd>
-      <dd>O víkendech doporučujeme provádět rezervace. Rezervace držíme 30 minut. Děkujeme za pochopení.</dd>
+      <dd>Rezervace stolu pouze telefonicky na čísle <a href="tel:+420777330050">+420 777 330 050</a>.</dd>
+      <dd>Pro rezervace 15 a více osob, pořádání seminářů, firemních akcí budete předáni kompetentní osobě, které s Vámi probere detaily rezervace.</dd>
+      <dd>O víkendech doporučujeme provádět rezervace. Rezervace držíme 30 minut. Děkujeme za pochopení.</dd>
     </dl>
 <!--
     <dl>
