--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@
       <dt>Rezervace</dt>
       <dd>Rezervace stolu pouze telefonicky na čísle <a href="tel:+420777330050">+420 777 330 050</a>.</dd>
       <dd>Pro rezervace 15 a více osob, pořádání seminářů, firemních akcí budete předáni kompetentní osobě, které s Vámi probere detaily rezervace.</dd>
-      <dd>O víkendech doporučujeme provádět rezervace.</dd>
-      <dd>Rezervace držíme 30 minut.</dd>
-      <dd>Děkujeme za pochopení.</dd>
+      <dd>O víkendech doporučujeme provádět rezervace. Rezervace držíme 30 minut. Děkujeme za pochopení.</dd>
     </dl>
 <!--
     <dl>
