--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -38,7 +38,7 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd>Crodino, soda, plátek pomeranče, led</dd>
       <dt>Aperol Spritz</dt>
       <dd class="price">90 Kč</dd>
-      <dd>Aperol, prosecco <a var="inputvar-term-doc">DOC</a>, soda, plátek pomeranče, led</dd>
+      <dd>Aperol, prosecco <a var="definition-doc">DOC</a>, soda, plátek pomeranče, led</dd>
       <dt>Tanqueray &amp; East Imperial Tonic</dt>
       <dd class="price">90 Kč</dd>
       <dd>Londýnský gin, tonic East Imperial, plátek limetky, led</dd>
@@ -47,19 +47,19 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd>Vodka Russian Standard, zázvorové pivo East Imperial, limetka, led</dd>
       <dt>Cuba Libre</dt>
       <dd class="price">90 Kč</dd>
-      <dd>Světlý rum Havana 3 <a var="inputvar-term-yo">YO</a>, Coca Cola, limetka, led</dd>
+      <dd>Světlý rum Havana 3 <a var="definition-yo">YO</a>, Coca Cola, limetka, led</dd>
       <dt>Mojito</dt>
       <dd class="price">90 Kč</dd>
-      <dd>Světlý rum Havana 3 <a var="inputvar-term-yo">YO</a>, soda, třtinový cukr, limetka, máta, led</dd>
+      <dd>Světlý rum Havana 3 <a var="definition-yo">YO</a>, soda, třtinový cukr, limetka, máta, led</dd>
       <dt>Cinzano Bianco <span>0,1 l</span></dt>
       <dd class="price">45 Kč</dd>
       <dt>Campari <span>0,05 l</span></dt>
       <dd class="price">50 Kč</dd>
-      <dt>Gancia Prosecco <a var="inputvar-term-doc">DOC</a>, Brut <span>0,1 l</span></dt>
+      <dt>Gancia Prosecco <a var="definition-doc">DOC</a>, Brut <span>0,1 l</span></dt>
       <dd class="price">60 Kč</dd>
-      <dt>Gancia Prosecco <a var="inputvar-term-doc">DOC</a>, Brut <span>0,75 l</span></dt>
+      <dt>Gancia Prosecco <a var="definition-doc">DOC</a>, Brut <span>0,75 l</span></dt>
       <dd class="price">350 Kč</dd>
-      <dt>Bepin de Eto Millesimato <a var="inputvar-term-docg">DOCG</a> <span>0,75 l</span></dt>
+      <dt>Bepin de Eto Millesimato <a var="definition-docg">DOCG</a> <span>0,75 l</span></dt>
       <dd class="price">600 Kč</dd>
       <dt>Louis Perdrier <span>0,75 l</span></dt>
       <dd class="price">240 Kč</dd>
@@ -156,19 +156,19 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dd class="price">240 Kč</dd>
       <dt>Millonario 10 Aniversario Reserva</dt>
       <dd class="price">120 Kč</dd>
-      <dt>Auténtico Nativo 15 <a var="inputvar-term-yo">YO</a></dt>
+      <dt>Auténtico Nativo 15 <a var="definition-yo">YO</a></dt>
       <dd class="price">100 Kč</dd>
       <dt>Pyrat XO Reserve</dt>
       <dd class="price">90 Kč</dd>
-      <dt>Angostura 5 <a var="inputvar-term-yo">YO</a></dt>
+      <dt>Angostura 5 <a var="definition-yo">YO</a></dt>
       <dd class="price">60 Kč</dd>
-      <dt>Angostura 7 <a var="inputvar-term-yo">YO</a></dt>
+      <dt>Angostura 7 <a var="definition-yo">YO</a></dt>
       <dd class="price">80 Kč</dd>
       <dt>Kraken Black Spiced</dt>
       <dd class="price">50 Kč</dd>
       <dt>Don Papa</dt>
       <dd class="price">100 Kč</dd>
-      <dt>Legendario Elixir 7 <a var="inputvar-term-yo">YO</a></dt>
+      <dt>Legendario Elixir 7 <a var="definition-yo">YO</a></dt>
       <dd class="price">60 Kč</dd>
       <dt>Six Saints</dt>
       <dd class="price">100 Kč</dd>
