--- a/plugins/InputVar/InputVar.html
+++ b/plugins/InputVar/InputVar.html
@@ -6,7 +6,7 @@
   <dl>
     <dt>Terminologie a pravopis</dt>
     <dd>Minimalizujte používání cizích termínů a žargonu! Ujistěte se, že neexistuje vhodný překlad. Čeští uživatelé preferují srozumitelnou (spisovnou) češtinu. Neznámé termíny je spíše odrazují.</dd>
-    <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište (např. <samp>vývar</samp> a nikoli <del><samp>browth</samp></del>). Případně můžete použít interaktivní slovník pojmů, např. <a var="inputvar-term-sous-vide">sous-vide</a>.</dd>
+    <dd>Cizí termíny vždy patřičně vysvětlete, přeložte či opište (např. <samp>vývar</samp> a nikoli <del><samp>browth</samp></del>). Případně můžete použít interaktivní slovník pojmů, např. <a var="definition-sous-vide">sous-vide</a>.</dd>
     <dd>Pozor na správné použití cizích termínů (např. <samp>au jus</samp> a nikoli <del><samp>Jus</samp></del>).</dd>
     <dd>K ověření pravopisu můžete použít <a href="http://prirucka.ujc.cas.cz/" title="Internetová jazyková příručka">internetovou příručku</a> či internet obecně.</dd>
     <dt>Konzistence</dt>
@@ -22,7 +22,7 @@
     <dd>Mezi číslo a jednotku patří mezera, pokud se jedná o dvě slova (např. <samp>sto gramů = 100 g</samp>, kdežto <samp>stogramový = 100g</samp>). Totéž platí např. pro procenta a další znaky.</dd>
     <dd>Na velikosti písmen záleží; zejména také u jednotek (např. <samp>g = gram</samp>, <samp>G = giga</samp>).</dd>
     <dd>Za interpunkční znaménka (jako je tečka, čárka atp.) patří mezera, až na výjimky jako např. konec závorky v této větě.</dd>
-    <dd>Mezi některá slova patří <a var="inputvar-term-nbsp">pevná mezera</a>. Jedná se o veškerá <a var="inputvar-term-zalomeni-radku">slova nevhodná na konec řádku</a> (jako např. jednopísmenné předložky) bez ohledu na jejich umístění v textu, neboť při tisku či na jiném zařízení se mohou vyskytnout na konci řádku.</dd>
+    <dd>Mezi některá slova patří <a var="definition-nbsp">pevná mezera</a>. Jedná se o veškerá <a var="definition-zalomeni-radku">slova nevhodná na konec řádku</a> (jako např. jednopísmenné předložky) bez ohledu na jejich umístění v textu, neboť při tisku či na jiném zařízení se mohou vyskytnout na konci řádku.</dd>
   </dl>  
  
   <form class="editable fillable validable validateform-10 eventable-noevent" id="inputvarform" action="/" method="post" var="action@action">
