--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -9,7 +9,7 @@
       <li><a href="/files/full/design/soups.jpg"><img src="/files/design/soups.jpg" alt="Soups"/></a></li>
     </ul>
     <dl class="meal">
-      <dt><a var="inputvar-term-chilli">Texaské chilli</a></dt>
+      <dt><a var="definition-chilli">Texaské chilli</a></dt>
       <dd>Americká specialita. Hustá pálivá polévka plná mletého hovězího a vepřového masa, drcených rajčat, Jalapeño papriček a fazolí. Doporučujeme s česnekovou bagetou.</dd>
       <dt class="price">Cena</dt>
       <dd class="price multiple">
@@ -20,7 +20,7 @@
     </dl>
     <dl class="meal">
       <dt>Kachní kaldoun</dt>
-      <dd>Česká specialita. Hustá <a var="inputvar-term-besamel">bešamelová</a> polévka se zeleninou, kachními drůbky, širokými nudlemi a houskovými knedlíčky.</dd>
+      <dd>Česká specialita. Hustá <a var="definition-besamel">bešamelová</a> polévka se zeleninou, kachními drůbky, širokými nudlemi a houskovými knedlíčky.</dd>
       <dt class="price">Cena</dt>
       <dd class="price multiple">
         <span><span>malý</span><span>49 Kč</span></span>
@@ -51,25 +51,25 @@
     <desc>Hamburgery připravujeme tradičně – velké a šťavnaté. Těstoviny doporučujeme jako lehčí alternativu k jídlu pro menší strávníky.</desc>
     <dl class="meal">
       <dt>Chicken Burger</dt>
-      <dd>Grilovaný marinovaný kuřecí steak, sezamová bulka, okurka, ledový salát, naše <a var="inputvar-term-bbq">BBQ</a> omáčka, hranolky, salát Coleslaw.</dd>
+      <dd>Grilovaný marinovaný kuřecí steak, sezamová bulka, okurka, ledový salát, naše <a var="definition-bbq">BBQ</a> omáčka, hranolky, salát Coleslaw.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">185 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Cheese Burger</dt>
-      <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, naše <a var="inputvar-term-bbq">BBQ</a> omáčka, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát Coleslaw.</dd>
+      <dd>Grilovaný steak z mletého hovězího krku (180 g), sezamová bulka, naše <a var="definition-bbq">BBQ</a> omáčka, sýr, rajče, slanina, ledový salát, cibule, okurka, hranolky, salát Coleslaw.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">239 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Chicken Penne Pomodoro</dt>
-      <dd>Kuřecí prsa na nudličky (100 g), italské těstoviny s rajčatovou omáčkou a čerstvou bazalkou se smetanou, strouhaný sýr <a var="inputvar-term-grana-padano">Grana Padano</a>, olivový olej.</dd>
+      <dd>Kuřecí prsa na nudličky (100 g), italské těstoviny s rajčatovou omáčkou a čerstvou bazalkou se smetanou, strouhaný sýr <a var="definition-grana-padano">Grana Padano</a>, olivový olej.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">169 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>Tagliatelle Funghi s krůtím prsem <a var="inputvar-term-sous-vide">sous-vide</a></dt>
-      <dd>Italské široké nudle s delikátní omáčkou z lesních hub, krůtí prso vařené metodou <a var="inputvar-term-sous-vide">sous-vide</a> na vnitřní teplotu 57 °C (vaření ve vakuu), sýr <a var="inputvar-term-grana-padano">Grana Padano</a>, olivový olej.</dd>
+      <dt>Tagliatelle Funghi s krůtím prsem <a var="definition-sous-vide">sous-vide</a></dt>
+      <dd>Italské široké nudle s delikátní omáčkou z lesních hub, krůtí prso vařené metodou <a var="definition-sous-vide">sous-vide</a> na vnitřní teplotu 57 °C (vaření ve vakuu), sýr <a var="definition-grana-padano">Grana Padano</a>, olivový olej.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">169 Kč</dd>
     </dl>
@@ -86,8 +86,8 @@
       <dd class="price">209 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt><a var="inputvar-term-caesar-salat">Caesar salát</a></dt>
-      <dd>Populární mexický salát z Tijuany. Římský salát, krutony, strouhaný sýr <a var="inputvar-term-grana-padano">Grana Padano</a>, Caesar dresing.</dd>
+      <dt><a var="definition-caesar-salat">Caesar salát</a></dt>
+      <dd>Populární mexický salát z Tijuany. Římský salát, krutony, strouhaný sýr <a var="definition-grana-padano">Grana Padano</a>, Caesar dresing.</dd>
       <dt class="price">Cena</dt>
       <dd class="price multiple">
         <span><span>malý</span><span>79 Kč</span></span>
@@ -95,8 +95,8 @@
       </dd>
     </dl>
     <dl class="meal">
-      <dt><a var="inputvar-term-caesar-salat">Caesar salát</a> s grilovaným kuřecím steakem</dt>
-      <dd>Římský salát, krutony, strouhaný sýr <a var="inputvar-term-grana-padano">Grana Padano</a>, Caesar dresing, grilovaný steak z marinovaných kuřecích prsou.</dd>
+      <dt><a var="definition-caesar-salat">Caesar salát</a> s grilovaným kuřecím steakem</dt>
+      <dd>Římský salát, krutony, strouhaný sýr <a var="definition-grana-padano">Grana Padano</a>, Caesar dresing, grilovaný steak z marinovaných kuřecích prsou.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">174 Kč</dd>
     </dl>
@@ -117,7 +117,7 @@
     </dl>
 
     <h class="break" id="z_panve_fritezy_a_woku">Z pánve, fritézy a woku</h>
-    <desc>Pro přípravu mezinárodních jídel používáme autentické nástroje. Kachní a krůtí maso vždy nakládáme či napichujeme a připravujeme metodou <a var="inputvar-term-sous-vide">sous-vide</a>.</desc>
+    <desc>Pro přípravu mezinárodních jídel používáme autentické nástroje. Kachní a krůtí maso vždy nakládáme či napichujeme a připravujeme metodou <a var="definition-sous-vide">sous-vide</a>.</desc>
     <dl class="meal">
       <dt>Crispy Salmon</dt>
       <dd>Steak z chlazeného lososa upravený na olivovém oleji s extra křupavou kůží, šťouchané brambory s pórkem a slaninou, pečená cherry rajčata, náš dresing.</dd>
@@ -125,8 +125,8 @@
       <dd class="price">249 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt><a var="inputvar-term-filirovani">Filírované</a> kachní prso <a var="inputvar-term-sous-vide">sous-vide</a></dt>
-      <dd>Marinované kachní prso s rozmarýnem a olivovým olejem, vařené metodou <a var="inputvar-term-sous-vide">sous-vide</a>, následně opečené. Podávané s <a var="inputvar-term-gratinovani">gratinovanými</a> bramborami, krémovým špenátem a brusinkovou omáčkou.</dd>
+      <dt><a var="definition-filirovani">Filírované</a> kachní prso <a var="definition-sous-vide">sous-vide</a></dt>
+      <dd>Marinované kachní prso s rozmarýnem a olivovým olejem, vařené metodou <a var="definition-sous-vide">sous-vide</a>, následně opečené. Podávané s <a var="definition-gratinovani">gratinovanými</a> bramborami, krémovým špenátem a brusinkovou omáčkou.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">209 Kč</dd>
     </dl>
@@ -138,7 +138,7 @@
     </dl>
     <dl class="meal">
       <dt>Buffalo Wings, 400 g</dt>
-      <dd>Populární americké jídlo. Kuřecí křidélka obalená v naší speciální pikantní <a var="inputvar-term-bbq">BBQ</a> omáčce, hranolky, salát Coleslaw.</dd>
+      <dd>Populární americké jídlo. Kuřecí křidélka obalená v naší speciální pikantní <a var="definition-bbq">BBQ</a> omáčce, hranolky, salát Coleslaw.</dd>
       <dd>Doporučujeme česnekový dip.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">185 Kč</dd>
@@ -162,25 +162,25 @@
     <dl class="meal">
       <dt>Grilovaný vepřový šašlik</dt>
       <dd>Marinovaná vepřová panenka grilovaná na špízu s cibulí a paprikou, zakončené rajčetem a žampionem, hranolky, salát Coleslaw.</dd>
-      <dd>Doporučujeme <a var="inputvar-term-bbq">BBQ</a> dip.</dd>
+      <dd>Doporučujeme <a var="definition-bbq">BBQ</a> dip.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">189 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Grilovaná panenka Madagaskar</dt>
-      <dd>Grilovaná panenka v celku, krájená na medailonky, smetanová omáčka s madagaskarským pepřem, <a var="inputvar-term-gratinovani">gratinované</a> brambory, krémový špenát.</dd>
+      <dd>Grilovaná panenka v celku, krájená na medailonky, smetanová omáčka s madagaskarským pepřem, <a var="definition-gratinovani">gratinované</a> brambory, krémový špenát.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">249 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt><a var="inputvar-term-bbq">BBQ</a> Baby Back Ribs</dt>
-      <dd>Vepřová žebírka grilovaná v naší pikantní <a var="inputvar-term-bbq">BBQ</a> omáčce, hranolky, česnekový dresing.</dd>
+      <dt><a var="definition-bbq">BBQ</a> Baby Back Ribs</dt>
+      <dd>Vepřová žebírka grilovaná v naší pikantní <a var="definition-bbq">BBQ</a> omáčce, hranolky, česnekový dresing.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">249 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Grill Mix</dt>
-      <dd>Grilovaná vepřová panenka, hovězí játra, marinované kuřecí prso, slanina, šťouchané brambory s pórkem a slaninou, sázené vajíčko, <a var="inputvar-term-bbq">BBQ</a> dip, žampion, cibule, kukuřice O’Brien.</dd>
+      <dd>Grilovaná vepřová panenka, hovězí játra, marinované kuřecí prso, slanina, šťouchané brambory s pórkem a slaninou, sázené vajíčko, <a var="definition-bbq">BBQ</a> dip, žampion, cibule, kukuřice O’Brien.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">234 Kč</dd>
     </dl>
@@ -204,19 +204,19 @@
     </dl>
     <dl class="meal">
       <dt>Chuck Flap, 300 g</dt>
-      <dd>Grilovaný tence krájený steak ze severní Ameriky v druhé nejvyšší kvalitě – <a var="inputvar-term-usdachoice">USDA Choice</a> z plemene Black Angus, podávaný na horké plotýnce s restovanou cibulí, žampiony a paprikou, k tomu lahůdkové brambory s rozmarýnem a olivovým olejem, remuláda.</dd>
+      <dd>Grilovaný tence krájený steak ze severní Ameriky v druhé nejvyšší kvalitě – <a var="definition-usdachoice">USDA Choice</a> z plemene Black Angus, podávaný na horké plotýnce s restovanou cibulí, žampiony a paprikou, k tomu lahůdkové brambory s rozmarýnem a olivovým olejem, remuláda.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">468 Kč</dd>
     </dl>
     <dl class="meal">
       <dt>Rib Eye Steak, 300 g</dt>
-      <dd>Jeden z nejpopulárnějších steaků. <a var="inputvar-term-tenderizovani">Tenderizovaný</a> steak z vysoce mramorovaného vysokého roštěnce grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
+      <dd>Jeden z nejpopulárnějších steaků. <a var="definition-tenderizovani">Tenderizovaný</a> steak z vysoce mramorovaného vysokého roštěnce grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">529 Kč</dd>
     </dl>
     <dl class="meal">
-      <dt>New York Strip <a var="inputvar-term-au-poivre">Steak au Poivre</a>, 300 g</dt>
-      <dd>Velice populární americký steak. <a var="inputvar-term-tenderizovani">Tenderizovaný</a> steak z nízkého roštěnce s tukovým krytím, okořeněný čerstvě drceným pepřem, grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
+      <dt>New York Strip <a var="definition-au-poivre">Steak au Poivre</a>, 300 g</dt>
+      <dd>Velice populární americký steak. <a var="definition-tenderizovani">Tenderizovaný</a> steak z nízkého roštěnce s tukovým krytím, okořeněný čerstvě drceným pepřem, grilovaný na vnitřní teplotu podle Vašeho přání, lahůdkové brambory s rozmarýnem a olivovým olejem, krémový špenát, remuláda.</dd>
       <dt class="price">Cena</dt>
       <dd class="price">529 Kč</dd>
     </dl>
@@ -224,8 +224,8 @@
     <h class="break" id="sladkosti">Sladkosti</h>
     <desc>Nabízíme osvědčené restaurační dezerty, které sami vyrábíme podle autentických receptur. Dezerty připravujeme na objednávku, proto jsou vždy čerstvé a prvotřídní.</desc>
     <dl class="meal">
-      <dt>Hot Chocolate <a var="inputvar-term-fondant">Fondant</a></dt>
-      <dd>Horký čokoládový <a var="inputvar-term-fondant">fondant</a> s dokonalou pistáciovou zmrzlinou Angelato a višněmi. (Příprava cca 15 minut.)</dd>
+      <dt>Hot Chocolate <a var="definition-fondant">Fondant</a></dt>
+      <dd>Horký čokoládový <a var="definition-fondant">fondant</a> s dokonalou pistáciovou zmrzlinou Angelato a višněmi. (Příprava cca 15 minut.)</dd>
       <dt class="price">Cena</dt>
       <dd class="price">119 Kč</dd>
     </dl>
@@ -285,7 +285,7 @@
     </dl>
     <dl class="meal">
       <dt>Krůtí prso v rajčatové omáčce</dt>
-      <dd>Jasmínová rýže, krůtí maso vařené metodou <a var="inputvar-term-sous-vide">sous-vide</a>, krájené a prohřáté v rajčatové omáčce.</dd>
+      <dd>Jasmínová rýže, krůtí maso vařené metodou <a var="definition-sous-vide">sous-vide</a>, krájené a prohřáté v rajčatové omáčce.</dd>
       <dd class="price">69 Kč</dd>
     </dl>
     <h class="break" id="prilohy">Přílohy</h>
@@ -303,7 +303,7 @@
       <dd class="price">39 Kč</dd>
       <dt>Restovaná zelenina v čínském woku</dt>
       <dd class="price">65 Kč</dd>
-      <dt><a var="inputvar-term-gratinovani">Gratinované</a> brambory</dt>
+      <dt><a var="definition-gratinovani">Gratinované</a> brambory</dt>
       <dd class="price">46 Kč</dd>
       <dt>Zelný salát Coleslaw malý, 120 g</dt>
       <dd class="price">29 Kč</dd>
@@ -334,7 +334,7 @@
       <dd class="price">29 Kč</dd>
       <dt>Česnekový dip</dt>
       <dd class="price">29 Kč</dd>
-      <dt><a var="inputvar-term-bbq">BBQ</a> dip</dt>
+      <dt><a var="definition-bbq">BBQ</a> dip</dt>
       <dd class="price">29 Kč</dd>
       <dt>Kečup Heinz</dt>
       <dd class="price">24 Kč</dd>
