--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -23,7 +23,7 @@
     </dl>
 
     <dl class="meal">
-      <dt>Bepin de Eto Millesimato, Conegliano Valdobbiadene Prosecco Superiore <a var="inputvar-term-docg">DOCG</a>, Extra Dry</dt>
+      <dt>Bepin de Eto Millesimato, Conegliano Valdobbiadene Prosecco Superiore <a var="definition-docg">DOCG</a>, Extra Dry</dt>
       <dd>Světle slámově žlutá barva se zelenkavými odlesky. Delikátní vůně čerstvě upečeného chleba, kterou doplňují tóny jablek, hrušek a meruněk. V závěru vůně růží a akátu. Velmi jemné a sametové víno s lehce sladkou chutí, která se harmonicky snoubí s kyselejší chutí připomínající limetovou šťávu.</dd>
       <dd class="price">
         <span><span>0,75 l</span><span>600 Kč</span></span>
@@ -31,7 +31,7 @@
     </dl>
 
     <dl class="meal">
-      <dt>Gancia Prosecco <a var="inputvar-term-doc">DOC</a>, Brut</dt>
+      <dt>Gancia Prosecco <a var="definition-doc">DOC</a>, Brut</dt>
       <dd>Prosecco odrůdy hroznů Glera světle žluté barvy s nazelenalými odlesky. Jemné, vytrvalé perlení. Intenzivní a přetrvávající vůně; ovocná, kvalitní, připomínající zelené jablko a květy akácie. Sladká a svěží, příjemná chuť, mimořádně jemná a vyvážená, ovocné zakončení.</dd>
       <dd class="price multiple">
         <span><span>0,1 l</span><span>60 Kč</span></span>
@@ -50,7 +50,7 @@
       </dd>
     </dl>
     <dl class="meal">
-      <dt>Chardonnay <a var="inputvar-term-igtigp">IGP</a> – suché bílé</dt>
+      <dt>Chardonnay <a var="definition-igtigp">IGP</a> – suché bílé</dt>
       <dd>Oblast Francie, Languedoc.</dd>
       <dd>Lehké bílé vínobílé víno s vůní bílých květin a koření.</dd>
       <dd class="price">
@@ -122,7 +122,7 @@
     </dl>
 
     <dl class="meal">
-      <dt>Grillo <a var="inputvar-term-igtigp">IGT</a> 2015 – suché</dt>
+      <dt>Grillo <a var="definition-igtigp">IGT</a> 2015 – suché</dt>
       <dd>Oblast Sicílie, Noto.</dd>
       <dd>Víno slámově žluté barvy se zlatými odstíny. Intenzivní květová vůně smíšená s tóny citrusů a žlutých broskví, tóny trávy a sladkých mandlí. Vyvážená, svěží a bohatá chuť.</dd>
       <dd class="price">
@@ -161,7 +161,7 @@
     </dl>
 
     <dl class="meal">
-      <dt>Nero d´Avola <a var="inputvar-term-igtigp">IGT</a> 2015 – suché</dt>
+      <dt>Nero d´Avola <a var="definition-igtigp">IGT</a> 2015 – suché</dt>
       <dd>Oblast Sicílie, Noto</dd>
       <dd>S rubínově červenou barvou je v tomto víně překypující pikantní aroma řervených bobulí s výraznými ovocnými tóny. Chuť je harmonická s příjemnou strukturou.</dd>
       <dd class="price">
