--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <li><a href="http://www.ceskatelevize.cz/porady/10084897100-kluci-v-akci/210562221900011/"><span class="fas fa-2x fa-play-circle">i</span>Legendy české kuchyně – M. D. Klíma, 2010.</a></li>
       </ul>
     </section>
-    <h id="nabidka" short="Nabídka">Nabídka restaurace</h>
+    <h id="nabidka" short="Nabídka">Nabídka restaurace.</h>
     <desc>Připravujeme mezinárodní jídla podle tradičních receptur tak, jak lidem chutnají po celém světě.</desc>
     <ul class="button-list">
       <li><a class="button button-img" href="/stala_nabidka"><span class="fas fa-3x fa-clipboard-list">i</span>Stálá nabídka jídel</a></li>
