--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </ul>
 <!--
 -->
-    <section data-image="/files/preview/design/menu-header.jpg">
+    <section>
       <h id="denni_nabidka" var="inputvar-nabidka" title="Denní nabídka" class="break nobalance">Denní nabídka</h>
       <desc var="inputvar-nabidka-popis">n/a</desc>
       <dl var="inputvar-nabidka-polevka1" class="meal" data-type="Soup"><dt>n/a</dt><dd>n/a</dd></dl>
