--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -2,7 +2,7 @@
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
   <h id="napojovy_listek" author="InternetGuru" ctime="2018-03-28">Nápojový lístek</h>
   <desc>Naše domácí limonády z čerstvého ovoce Vás osvěží za horkého dne a náš připravovaný pečený čaj zahřeje v sychravém počasí. Pivařům čepujeme Plzeň s občasnou nabídkou piv z malých pivovarů a nezaostáváme v širší nabídce kvalitních rumů.</desc>
-  <section class="contenttoc" data-image="/files/preview/design/menu-header.jpg">
+  <section class="contenttoc">
     <h id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
     <desc>n/a</desc>
     <dl class="meal meal-oneline">
