--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
-  <h id="stala_nabidka" author="InternetGuru" ctime="2018-03-28">Stálá nabídka jídel</h>
+  <h id="stala_nabidka" author="InternetGuru" ctime="2018-03-28" data-alternate-cs="https://www.steakgrill.cz/regular_menu">Stálá nabídka jídel</h>
   <desc>Nabízíme populární jídla mezinárodní kuchyně. Mimo steaků a burgerů si přijdou na své i milovníci salátů a netradičních polévek, pro které je náš podnik také vyhlášený.</desc>
   <section class="contenttoc">
     <h id="polevky">Polévky</h>
