--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
-  <h id="napojovy_listek" author="InternetGuru" ctime="2018-03-28">Nápojový lístek</h>
+  <h id="napojovy_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-cs="https://en.steakgrill.cz/beverages">Nápojový lístek</h>
   <desc>Naše domácí limonády z čerstvého ovoce Vás osvěží za horkého dne a náš připravovaný pečený čaj zahřeje v sychravém počasí. Pivařům čepujeme Plzeň s občasnou nabídkou piv z malých pivovarů a nezaostáváme v širší nabídce kvalitních rumů.</desc>
   <section class="contenttoc">
     <h id="alkoholicke" title="Alkoholické nápoje, pivo…">Alkoholické nápoje, pivo</h>
