--- a/vinny_listek.html
+++ b/vinny_listek.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <body xml:lang="cs" ns="https://www.steakgrill.cz">
-  <h id="vinny_listek" author="InternetGuru" ctime="2018-03-28">Vinný lístek</h>
+  <h id="vinny_listek" author="InternetGuru" ctime="2018-03-28" data-alternate-en="https://en.steakgrill.cz/wine_list">Vinný lístek</h>
   <desc>Vinný lístek sestavuje přední český specialista přímo na míru naší restauraci. Hlavním kritériem volby je vedle nabídky jídel také přijatelná cena. Vína nabízíme francouzská, italská a česká.</desc>
   <section class="contenttoc">
     <h id="sekty" title="Sekty a Prosecco…">Sekty a Prosecco</h>
