--- a/napojovy_listek.html
+++ b/napojovy_listek.html
@@ -90,8 +90,8 @@ nápoje detailněji popsány včetně složení.</desc> -->
       <dt>Bonaqua <span>0,25 l</span></dt>
       <dd class="price">30 Kč</dd>
       <dd>(perlivá, jemně perlivá, neperlivá)</dd>
-      <dt>Red bull <span>0,25 l</span></dt>
-      <dd class="price">60 Kč</dd>
+<!--       <dt>Red bull <span>0,25 l</span></dt> -->
+<!--       <dd class="price">60 Kč</dd> -->
       <dt>Romerquelle <span>0,33 l</span></dt>
       <dd class="price">35 Kč</dd>
       <dd>(perlivá, neperlivá)</dd>
