--- a/stala_nabidka.html
+++ b/stala_nabidka.html
@@ -354,7 +354,7 @@
       <li var="inputvar-rezervace" class="print">Rezervace jsou možné pouze telefonicky.</li>
       <li>Záměna jedné přílohy u každého jídla je možná podle Vašeho přání.</li>
       <li>Veškerá jídla vydáváme s sebou a za zabalení účtujeme 5 Kč.</li>
-      <li>Dělení jídel je možné za příplatek 15 Kč.</li>
+      <li>Dělení některých jídel je možné za příplatek 15 Kč.</li>
       <li>Informace o konkrétních alergenech v pokrmech žádejte u obsluhy.</li>
       <li>Jídla je možné objednat nejpozději hodinu před koncem otevírací doby.</li>
     </ul>
