--- a/index.html
+++ b/index.html
@@ -191,15 +191,121 @@
       <h id="novinky">Odběr novinek</h>
       <desc>Naše registrované zákazníky informujeme o grilovačkách a dalších pořádaných akcích. Pro registraci stačí uvést <label for="EMAIL">e-mailovou adresu</label>. Registraci je možné kdykoli zrušit.</desc>
       <form id="news" method="post" action="https://steakgrill.us15.list-manage.com/subscribe/post?u=8625178b2a66c8710f182b4d0&amp;id=f93996121e">
-      <dl>
-        <dt><label for="EMAIL">E-mailová adresa</label></dt>
-        <dd>
-          <input type="email" value="" name="EMAIL" placeholder="josef.novak@seznam.cz" class="required email" id="EMAIL"/>
-          <input class="hide" type="text" name="b_8625178b2a66c8710f182b4d0_f93996121e" tabindex="-1" value=""/>
-        </dd>
-        <dd><input type="submit" id="submit" class="button" value="Registrovat se k odběru"/></dd>
-      </dl>
-    </form>
+        <dl>
+          <dt><label for="EMAIL">E-mailová adresa</label></dt>
+          <dd>
+            <input type="email" value="" name="EMAIL" placeholder="josef.novak@seznam.cz" class="required email" id="EMAIL"/>
+            <input class="hide" type="text" name="b_8625178b2a66c8710f182b4d0_f93996121e" tabindex="-1" value=""/>
+          </dd>
+          <dd><input type="submit" id="submit" class="button" value="Registrovat se k odběru"/></dd>
+        </dl>
+      </form>
+      <section>
+        <h id="ukazka">Ukázková zpráva</h>
+        <desc>n/a</desc>
+        <blockcode class="nohighlight">Předmět: Nový článek z praktického lékařství
+  Odesílatel: "PraLék.cz"&lt;alert@pralek.cz&gt;
+
+  Článek Jaroslava Pavelky z 2. října 2008 je nyní dostupný na:
+     http://www.pralek.cz/teplota/
+
+  Normální tělesná teplota, podchlazení, horečka
+  Tělesná teplota se mění podle fyzické aktivity organizmu. Stoupá
+  nebo klesá vlivem zevního prostředí a stoupá při některých
+  onemocněních.
+
+  Pro odhlášení z odebírání upozornění klikněte na následující odkaz:
+     http://alert.pralek.cz/2QuTamc2hBM87dwa</blockcode>
+        <h id="soukromi" short="Ochrana soukromí">Podmínky ochrany osobních údajů</h>
+        <desc>n/a</desc>
+        <section class="agregator">
+          <h id="zakladni" short="Základní">Základní ustanovení</h>
+          <desc>n/a</desc>
+          <ol>
+            <li>Správcem osobních údajů podle čl. 4 bod 7 nařízení Evropského parlamentu a Rady (EU) 2016/679 o ochraně fyzických osob v souvislosti se zpracováním osobních údajů a o volném pohybu těchto údajů (dále jen GDPR) je Lubomír Brejník, IČ 40206246 se sídlem Vančurova 3, 412 01 Litoměřice (dále jen Správce).</li>
+            <li>Kontaktní údaje Správce jsou lubomir.brejnik@internetguru.cz</li>
+            <li>Osobními údaji se rozumí veškeré informace o identifikované nebo identifikovatelné fyzické osobě; identifikovatelnou fyzickou osobou je fyzická osoba, kterou lze přímo či nepřímo identifikovat, zejména odkazem na určitý identifikátor, například jméno, identifikační číslo, lokační údaje, síťový identifikátor nebo na jeden či více zvláštních prvků fyzické, fyziologické, genetické, psychické, ekonomické, kulturní nebo společenské identity této fyzické osoby.</li>
+            <li>Správce nejmenoval pověřence pro ochranu osobních údajů.</li>
+          </ol>
+          <h id="duvod" short="Důvod">Zákonný důvod zpracování osobních údajů</h>
+          <desc>n/a</desc>
+          <ol>
+            <li>Zákonným důvodem zpracování osobních údajů je Váš souhlas se zpracováním pro účely zasílání newsletterů podle čl. 6 odst. 1 písm. a) GDPR ve spojení s § 7 odst. 2 zákona č. 480/2004 Sb., o některých službách informační společnosti v případě, že nedošlo k objednávce zboží nebo služby (dále jen Souhlas).</li>
+            <li>Ze strany Správce nedochází k automatickému individuálnímu rozhodování ve smyslu čl. 22 GDPR. S takovým zpracováním jste poskytl/a svůj výslovný souhlas.</li>
+          </ol>
+          <h id="ucel" short="Účel">Účel zpracování, kategorie, zdroje a příjemci osobních údajů</h>
+          <desc>n/a</desc>
+          <dl>
+            <dt>Zákonný důvod</dt>
+            <dd>Oprávněný zájem</dd>
+            <dt>Účel</dt>
+            <dd>Běžná analýza návštěvnosti, odhalování chyb serveru a prevence podvodů a útoků na server</dd>
+            <dt>Údaje</dt>
+            <dd>Cookies třetích stran a po dobu 50 měsíců IP adresy a údaje o prohlížení webu, zobrazené stránky a akce na stránce</dd>
+            <dt>Zdroj údajů</dt>
+            <dd>Pohyb uživatele na webu, zobrazení stránky s chybou</dd>
+            <dt>Příjemci osobních údajů (zpracovatelé)</dt>
+            <dd>Google Analytics, webhostingové služby a případně další analytické služby</dd>
+          </dl>
+          <dl>
+            <dt>Zákonný důvod</dt>
+            <dd>Souhlas</dd>
+            <dt>Účel</dt>
+            <dd>Marketing a propagace webu</dd>
+            <dt>Údaje</dt>
+            <dd>E-maily</dd>
+            <dt>Zdroj údajů</dt>
+            <dd>Formulář pro newsletter</dd>
+            <dt>Příjemci osobních údajů (zpracovatelé)</dt>
+            <dd>Služba pro rozesílání e-mailů</dd>
+          </dl>
+          <h id="doba" short="Doba">Doba uchovávání údajů</h>
+          <desc>n/a</desc>
+          <ol>
+            <li>Pokud není v předchozích bodech uvedeno jinak, Správce uchovává osobní údaje po dobu, než je odvolán souhlas se zpracováním osobních údajů pro uvedené účely, jsou-li osobní údaje zpracovávány na základě souhlasu.</li>
+            <li>Po odvolání souhlasu či uplynutí doby uchovávání osobních údajů Správce osobní údaje vymaže.</li>
+          </ol>
+          <h id="cookies" short="Cookies">Soubory cookie</h>
+          <desc>n/a</desc>
+          <ol>
+            <li>Jsou-li v bodě <a href="#ucel">Účel</a> mezi osobními údaji uvedeny soubory cookie, platí pro jejich zpracování následující pravidla.<ul>
+              <li>Pravidla pro používání nebo zablokování cookies si může každý uživatel nastavit ve svém internetovém prohlížeči, čímž dává najevo svůj souhlas s jejich zpracováním.</li>
+              <li>Uživatel si může nastavit povolení nebo odmítnutí veškerých nebo pouze některých souborů cookies (např. cookies třetích stran). Zablokování souborů cookies může mít negativní vliv na použitelnost webové stránky a služby.</li>
+              <li>Na tomto webu je návštěvníkům, kteří souhlasí s umístěním cookies do svého prohlížeče prostřednictvím patřičného nastavení chování ke cookies jednotlivých prohlížečů umístěna informace od společnosti <a href="https://policies.google.com/privacy?hl=cs" title="Zásady ochrany osobních údajů Google">Google</a> (<a href="https://policies.google.com/technologies/cookies?hl=cs" title="Jak Google využívá soubory cookie">informace o cookies</a>).</li></ul></li>
+            <li>Vznesete-li námitku proti zpracování technických cookies nezbytných pro fungování webových stránek, nelze v takovém případě zaručit plnou funkčnost a kompatibilitu webových stránek.</li>
+          </ol>
+          <h id="prijemci" short="Příjemci">Příjemci osobních údajů (subdodavatelé správce)</h>
+          <desc>n/a</desc>
+          <ol>
+            <li>Správce má v úmyslu předat osobní údaje do třetí země (do země mimo EU) nebo mezinárodní organizaci. Příjemci osobních údajů ve třetích zemích jsou poskytovatelé mailingových služeb, úložiště dat a souborů, analytických nástrojů a služeb pro přímý marketing.</li>
+          </ol>
+          <h id="prava" short="Práva">Vaše práva</h>
+          <desc>n/a</desc>
+          <ol>
+            <li>Za podmínek stanovených v GDPR máte právo<ul>
+              <li>na přístup ke svým osobním údajům dle čl. 15 GDPR,</li>
+              <li>opravu osobních údajů dle čl. 16 GDPR, popřípadě omezení zpracování dle čl. 18 GDPR,</li>
+              <li>na výmaz osobních údajů dle čl. 17 GDPR,</li>
+              <li>vznést námitku proti zpracování dle čl. 21 GDPR,</li>
+              <li>na přenositelnost údajů dle čl. 20 GDPR,</li>
+              <li>odvolat souhlas se zpracováním písemně nebo elektronicky na adresu nebo email správce uvedený v čl. III těchto podmínek.</li></ul></li>
+            <li>Dále máte právo podat stížnost u Úřadu pro ochranu osobních údajů v případě, že se domníváte, že bylo porušeno Vaše právo na ochranu osobních údajů.</li>
+          </ol>
+          <h id="zabezpeceni" short="Zabezpečení">Podmínky zabezpečení osobních údajů</h>
+          <desc>n/a</desc>
+          <ol>
+            <li>Správce prohlašuje, že přijal veškerá vhodná technická a organizační opatření k zabezpečení osobních údajů.</li>
+            <li>Správce přijal technická opatření k zabezpečení datových úložišť a úložišť osobních údajů v listinné podobě.</li>
+            <li>Správce prohlašuje, že k osobním údajům mají přístup pouze jím pověřené osoby.</li>
+          </ol>
+          <h id="zaverecna" short="Závěrečná">Závěrečná ustanovení</h>
+          <desc>n/a</desc>
+          <ol>
+            <li>Odesláním internetového registračního formuláře potvrzujete, že jste seznámen/a s podmínkami ochrany osobních údajů a že je v celém rozsahu přijímáte.</li>
+            <li>Správce je oprávněn tyto podmínky změnit. Novou verzi podmínek ochrany osobních údajů zveřejní na svých internetových stránkách a zároveň Vám zašle novou verzi těchto podmínek Vaši e-mailovou adresu, kterou jste správci poskytl/a.</li>
+          </ol>
+        </section>
+      </section>
       <h id="contact_form">Kontaktní formulář</h>
       <desc>Pošlete nám dotaz nebo zpětnou vazbu, jak se vám u nás líbilo nebo v čem bychom se mohli zlepšit. Pokud uvedete kontaktní údaje, můžete očekávat naší odpověď. <span var="inputvar-rezervace">n/a</span></desc>
       <p var="contactform-basic"/>
