--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
      http://alert.pralek.cz/2QuTamc2hBM87dwa</blockcode>
         <h id="soukromi" short="Ochrana soukromí">Podmínky ochrany osobních údajů</h>
         <desc>n/a</desc>
-        <section class="agregator">
+        <section class="agregator contentbalancer-none">
           <h id="zakladni" short="Základní">Základní ustanovení</h>
           <desc>n/a</desc>
           <ol>
