--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
           <h id="zakladni" short="Základní">Základní ustanovení</h>
           <desc>n/a</desc>
           <ol>
-            <li>Správcem osobních údajů podle čl. 4 bod 7 nařízení Evropského parlamentu a Rady (EU) 2016/679 o ochraně fyzických osob v souvislosti se zpracováním osobních údajů a o volném pohybu těchto údajů (dále jen GDPR) je Lubomír Brejník, IČ 40206246 se sídlem Vančurova 3, 412 01 Litoměřice (dále jen Správce).</li>
-            <li>Kontaktní údaje Správce jsou lubomir.brejnik@internetguru.cz</li>
+            <li>Správcem osobních údajů podle čl. 4 bod 7 nařízení Evropského parlamentu a Rady (EU) 2016/679 o ochraně fyzických osob v souvislosti se zpracováním osobních údajů a o volném pohybu těchto údajů (dále jen GDPR) je STEAKGRILL s.r.o., IČ 08311901 se sídlem Račiněves 189, 413 01 Račiněves (dále jen Správce).</li>
+            <li>Kontaktní údaje Správce jsou restaurace@steakgrill.cz</li>
             <li>Osobními údaji se rozumí veškeré informace o identifikované nebo identifikovatelné fyzické osobě; identifikovatelnou fyzickou osobou je fyzická osoba, kterou lze přímo či nepřímo identifikovat, zejména odkazem na určitý identifikátor, například jméno, identifikační číslo, lokační údaje, síťový identifikátor nebo na jeden či více zvláštních prvků fyzické, fyziologické, genetické, psychické, ekonomické, kulturní nebo společenské identity této fyzické osoby.</li>
             <li>Správce nejmenoval pověřence pro ochranu osobních údajů.</li>
           </ol>
