--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 -->
     <section class="contentbalancer-none">
       <h id="novinky">Odběr novinek</h>
-      <desc>Naše registrované zákazníky informujeme o grilovačkách a dalších pořádaných akcích. Pro registraci stačí uvést <label for="EMAIL">e-mailovou adresu</label>. Registraci je možné kdykoli zrušit.</desc>
+      <desc>Naše registrované zákazníky informujeme o grilovačkách a dalších pořádaných akcích. Pro registraci stačí uvést <label for="EMAIL">e-mailovou adresu</label>. Registraci je možné kdykoli zrušit. <a href="gdpr">Podmínky ochrany osobních údajů (GDPR)</a>.</desc>
       <form id="news" method="post" action="https://steakgrill.us15.list-manage.com/subscribe/post?u=8625178b2a66c8710f182b4d0&amp;id=f93996121e">
         <dl>
           <dt><label for="EMAIL">E-mailová adresa</label></dt>
